# vieteduchain

./: .gitignore  CONTRACT_ADDRESSES_README.md  DATA_GENERATOR_README.md  README.md  README_DEPLOY.md  auto_deploy_contract.py  backup_contract_addresses.ps1  backup_contract_addresses.sh  data.json  data_generator.py  data_generator_core_test.py  deploy_contracts.py  deployment_report.md  fix_contract_addresses.py  fix_eduadmission_contract.py  implementation_report.md  pitching.md  rebuild_restart_core.ps1  test_api.py  update_contract_addr.py
api/: generate_dummy_data.py  main.py  requirements.txt  test_api_endpoints.py  test_api_health.py  test_api_post_endpoints.py  test_contract_env_and_deploy.py  test_eduadmission.py  test_eduadmission_api_real.py  test_eduadmission_router.py  test_eduid_api.py  test_eduid_router_verbose.py  test_nodeinfo.py
api/config/: initial_nodes.json
api/models/: node.py
api/routers/: eduadmission.py  eduadmission.py.bak  educert.py  eduid.py  edumarket.py  edupay.py  nodeinfo.py  permissions.py  permissions_service_router.py  researchledger.py
api/services/: permissions_service.py
be/educhain/: README.md  REST_API.md  api-docs.md  entrypoint_multi.sh
be/educhain/smart-contracts/eduadmission/: Cargo.toml  README.md
be/educhain/smart-contracts/eduadmission/artifacts/: checksums.txt
be/educhain/smart-contracts/eduadmission/src/: lib.rs
be/educhain/smart-contracts/educert/: Cargo.toml  README.md
be/educhain/smart-contracts/educert/src/: educert_nft.rs  lib.rs
be/educhain/smart-contracts/researchledger/: Cargo.toml  README.md  migrations
be/educhain/smart-contracts/researchledger/artifacts/: checksums.txt  checksums_intermediate.txt
be/educhain/smart-contracts/researchledger/src/: lib.rs
config/: initial_nodes.json
core/: go.mod
core/cmd/: core_health_test.go  main.go
core/internal/: app.go  node.go  permissions.go
core/proto/: permissions.proto
cosmwasm-contracts/: Cargo.toml  Dockerfile
deploy/: Dockerfile.api  Dockerfile.core  Dockerfile.ui  contract.env  docker-compose.yml  entrypoint_core.sh  sync_contract_addresses.sh
deploy/contract_addresses/: contract_addresses.json
deploy/contract_addresses_node1/: contract_addresses.json
deploy/contract_addresses_node2/: contract_addresses.json
deploy/contract_addresses_node3/: contract_addresses.json
fe/: Dockerfile  README.MD  docker-compose.yml  package.json
fe/src/: config.ts  contract-addresses.ts
ui/: Dockerfile  config.js  next.config.js  package.json  ui_e2e_test.py
ui/components/: CredentialCard.tsx  QRCodeDisplay.tsx  TransactionCard.tsx
ui1/: package-lock.json
ui2/: package.json
(+158 files in other folders)
