[package]
name = "eduadmission"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
cosmwasm-std = { version = "0.16", features = ["serde"] }
cw-storage-plus = "0.16"
cw-multi-test = "0.16"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[features]
default = ["std"]
std = []