[package]
name = "educert"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
cosmwasm-std = { version = "0.16", features = ["serde"] }
cw-storage-plus = "0.8"
cw-multi-test = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["std"]
std = []