[package]
name = "educert"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = { version = "0.16.7", features = ["serde"] }
cosmwasm-storage = "0.16.7"
cw-storage-plus = "0.9.1"
schemars = "0.8.8"
serde = { version = "1.0.137", features = ["derive"] }
thiserror = "1.0.31"
sha2 = "0.10.2"
serde_json = "1.0"

[dev-dependencies]
cosmwasm-schema = "0.16.7"
cw-multi-test = "0.9.1"

[features]
default = ["std"]
std = []