[package]
name = "researchledger"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
cosmwasm-std = { version = "0.16", features = ["serde"] }
cw-storage-plus = "0.9"
cw-multi-test = "0.9"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
cw-utils = "0.16"
wasm-bindgen-test = "0.3"